@@ -106,10 +106,11 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    void CustomWidgetForBindings::update(sf::Time elapsedTime)
+    bool CustomWidgetForBindings::update(sf::Time elapsedTime)
     {
         Widget::update(elapsedTime);
         implUpdateFunction(elapsedTime);
+        return false;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
