@@ -155,9 +155,9 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    void SubwidgetContainer::update(sf::Time elapsedTime)
+    bool SubwidgetContainer::update(sf::Time elapsedTime)
     {
-        m_container->update(elapsedTime);
+        return m_container->update(elapsedTime);
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
