@@ -1276,9 +1276,9 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    void EditBox::update(sf::Time elapsedTime)
+    bool EditBox::update(sf::Time elapsedTime)
     {
-        Widget::update(elapsedTime);
+        bool screenRefreshRequired = Widget::update(elapsedTime);
 
         // Only show/hide the caret every half second
         if (m_animationTimeElapsed >= sf::milliseconds(getEditCursorBlinkRate()))
@@ -1291,7 +1291,11 @@ namespace tgui
 
             // Too slow for double clicking
             m_possibleDoubleClick = false;
+
+            screenRefreshRequired = true;
         }
+
+        return screenRefreshRequired;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
