@@ -219,15 +219,17 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    void Picture::update(sf::Time elapsedTime)
+    bool Picture::update(sf::Time elapsedTime)
     {
-        Widget::update(elapsedTime);
+        const bool screenRefreshRequired = Widget::update(elapsedTime);
 
         if (m_animationTimeElapsed >= sf::milliseconds(getDoubleClickTime()))
         {
             m_animationTimeElapsed = {};
             m_possibleDoubleClick = false;
         }
+
+        return screenRefreshRequired;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
