@@ -1046,15 +1046,17 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    void TreeView::update(sf::Time elapsedTime)
+    bool TreeView::update(sf::Time elapsedTime)
     {
-        Widget::update(elapsedTime);
+        const bool screenRefreshRequired = Widget::update(elapsedTime);
 
         if (m_animationTimeElapsed >= sf::milliseconds(getDoubleClickTime()))
         {
             m_animationTimeElapsed = {};
             m_possibleDoubleClick = false;
         }
+
+        return screenRefreshRequired;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
